<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
	android:background="#ffffff" >
	<!-- 원본 이미지 -->
	<ImageView
		android:id="@+id/origin"
		android:layout_width="100dp"
		android:layout_height="116dp"
		android:layout_marginRight="10dp"
		android:scaleType="fitXY"
		android:src="@drawable/sample" />
	<TextView
	    android:layout_width="100dp"
		android:layout_height="36dp"
		android:layout_below="@id/origin"
		android:text="@string/origin_img"
		android:textColor="@android:color/black"
		android:textSize="13sp"
		android:gravity="center_horizontal" />
	<!-- 이미지 뷰를 grayscale로 변경 -->
	<ImageView
		android:id="@+id/gray_imageview"
		android:layout_width="100dp"
		android:layout_height="116dp"
		android:layout_toRightOf="@id/origin"
		android:layout_marginRight="10dp"
		android:scaleType="fitXY"
		android:src="@drawable/sample" />
	<TextView
	    android:layout_width="100dp"
		android:layout_height="36dp"
		android:layout_below="@id/gray_imageview"
		android:layout_alignLeft="@id/gray_imageview"
		android:text="@string/grayscale_imageview"
		android:textColor="@android:color/black"
		android:textSize="13sp"
		android:gravity="center_horizontal" />
	<!-- drawable만 grayscale로 변경 -->
	<ImageView
		android:id="@+id/gray_drawable"
		android:layout_width="100dp"
		android:layout_height="116dp"
		android:layout_toRightOf="@id/gray_imageview"
		android:scaleType="fitXY"
		android:src="@drawable/sample" />
	<TextView
	    android:layout_width="100dp"
		android:layout_height="36dp"
		android:layout_below="@id/gray_drawable"
		android:layout_alignLeft="@id/gray_drawable"
		android:text="@string/grayscale_drawable"
		android:textColor="@android:color/black"
		android:textSize="13sp"
		android:gravity="center_horizontal" />
	<Button
		android:id="@+id/clear"
		android:layout_width="100dp"
		android:layout_height="60dp"
		android:layout_below="@id/origin"
		android:layout_marginTop="50dp"
		android:textSize="13sp"
		android:text="@string/btn_clear"/>
	<Button
		android:id="@+id/convert_imageview"
		android:layout_width="100dp"
		android:layout_height="60dp"
		android:layout_below="@id/origin"
		android:layout_alignLeft="@id/gray_imageview"
		android:layout_marginTop="50dp"
		android:textSize="13sp"
		android:text="@string/btn_imageview"/>
	<Button
		android:id="@+id/convert_drawable"
		android:layout_width="100dp"
		android:layout_height="60dp"
		android:layout_below="@id/origin"
		android:layout_alignLeft="@id/gray_drawable"
		android:layout_marginTop="50dp"
		android:textSize="13sp"
		android:text="@string/btn_drawable"/>
</RelativeLayout>
